# src/app/route/order.routes.ts
@@ -7,13 +7,20 @@ import { BookingValidationRequest } from "@service/order.service";
 import { DateTime } from "luxon";
 import { Product, ExtraType } from "@enum/business-rules.enum";
 import { getBusinessRules } from "@service/business-rules.cache";
+import { authenticate } from "@middleware/authentication.middleware";
 
-function isBookingValidationRequestArray(data: any): data is BookingValidationRequest[] {
+function isBookingValidationRequestArray(data: any): boolean  {
     return Array.isArray(data) && data.every(item =>
         typeof item === "object" &&
         DateTime.fromISO(item.slotStart).isValid &&
         Object.values(Product).includes(item.product) &&
-        typeof item.passengersAmount === "number"
+        (typeof item.passengersAmount === "number" || (
+            Array.isArray(item.passengers) &&
+            item.passengers.every((passenger: any) =>
+                typeof passenger.fullName === "string" &&
+                DateTime.fromISO(passenger.birthdate).isValid
+            )
+        ))
     );
 }
 
@@ -69,4 +76,4 @@ const orderValidation: ValidationChain[] = [
 
 export default Router()
     .post("/order/validate", withValidation(orderValidation), validateOrder)
-    .post("/order", withValidation(orderValidation), createOrder);
+    .post("/order/create", authenticate, withValidation(orderValidation), createOrder);
